fix spacing errors in sidebar.

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ color: red;
      width: 400px;
      height: auto;
  }
-  .resize {
+  .resize1 {
     width: 300px;
     height: auto;}
 .my-class {
